# maths_exp

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/maths_exp_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: maths_exp.podspec
lib/: maths_exp.dart  maths_exp_bindings_generated.dart
linux/: CMakeLists.txt
macos/: maths_exp.podspec
macos/Classes/: maths_exp.c
src/: CMakeLists.txt  config.h  diff.c  g77_interface.c  gsl_math.h  gsl_version.h  maths_exp.c  parser.c  xmath.c
src/gsl/: Makefile
src/matheval/: matheval.c  parser.h  parser.y  xmath.h
windows/: CMakeLists.txt
